Update node modules

--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "dependencies": {
-    "animation-stepper": "^0.0.1"
+    "animation-stepper": "^0.0.1",
+    "easter-eggs": "^1.1.0",
+    "loading-layer": "^1.1.0",
+    "purple-console": "^1.0.1"
   }
 }
