--- a/package.json
+++ b/package.json
@@ -1,5 +1,26 @@
 {
-  "dependencies": {
+  "devDependencies": {
+    "concurrently": "^4.1.0",
+    "cross-env": "^5.2.0",
+    "grunt": "^1.0.3",
+    "grunt-cleanempty": "^1.0.3",
+    "grunt-contrib-clean": "~2.0.0",
+    "grunt-contrib-compass": "^1.1.1",
+    "grunt-contrib-compress": "^1.4.3",
+    "grunt-contrib-concat": "~1.0.1",
+    "grunt-contrib-copy": "~1.0.0",
+    "grunt-contrib-cssmin": "~3.0.0",
+    "grunt-contrib-htmlmin": "^3.0.0",
+    "grunt-contrib-jshint": "~2.1.0",
+    "grunt-contrib-uglify": "^4.0.1",
+    "grunt-contrib-watch": "^1.1.0",
+    "grunt-express-server": "^0.5.1",
+    "grunt-filerev": "^2.3.1",
+    "grunt-parallel": "^0.5.1",
+    "grunt-rev": "~0.1.0",
+    "grunt-usemin": "~3.1.1",
+    "jest": "^24.5.0",
+
     "animation-stepper": "^0.0.1",
     "easter-eggs": "^1.2.0",
     "flying-canvas": "^0.1.0",
